fix overflow

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -19,7 +19,7 @@ body {
 }
 
 pre {
-    overflow-x: scroll !important;
+    overflow-x: auto;
     white-space: pre;
     max-width: 100%;
     min-width: 0px;
